--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,10 @@ body {
 .conteudo {
     width: 100%;
     max-width: 100%;
-    /* Evita que ultrapasse a largura da tela */
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    /* Adiciona flexibilidade para que os itens se movam se necessário */
 }
 
 .caixa-texto {
@@ -71,7 +69,6 @@ button {
 button:hover {
     background: #05633c;
     transform: scale(1.1);
-    /* aumenta em 10%, sem empurrar nada */
     transition: transform 0.3s ease;
 }
 
@@ -79,12 +76,12 @@ button:hover {
     width: 600px;
     display: flex;
     justify-content: flex-end;
-    margin-top: 250px; /* valor padrão para monitores maiores */
+    margin-top: 250px;
 }
 
 @media (max-height: 800px) {
     .caixa-imagem {
-        margin-top: 40px; /* notebooks com menos altura visível */
+        margin-top: 40px;
     }
 }
 
@@ -118,7 +115,7 @@ button:hover {
     position: absolute;
     top: 0;
     left: 0;
-    clip-path: circle(30vw at right 40vw); /* adaptável ao tamanho da tela */
+    clip-path: circle(30vw at right 40vw);
     z-index: -1;
     transition: background 0.5s ease, background-color 0.5s ease-in-out;
     opacity: 0.8;
@@ -138,47 +135,47 @@ button:hover {
 
 .container {
     display: flex;
-    justify-content: space-between; /* Distribui os itens igualmente */
-    flex-wrap: wrap; /* Permite que os itens que não cabem na linha sejam movidos para a linha seguinte */
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .item {
-    flex: 1 1 100%; /* Os itens ocupam 100% do espaço disponível e podem se redimensionar */
+    flex: 1 1 100%;
 }
 
 @media (max-width: 480px) {
     .caixa-imagem {
-        width: 100%;  /* A largura da caixa vai ocupar toda a tela */
-        margin-top: 10vh; /* Ajusta a margem no topo para dar mais espaço */
+        width: 100%;
+        margin-top: 10vh;
     }
 
     .circulo {
-        clip-path: circle(50vw at right 50vw); /* Ajusta o círculo para que ele não fique gigante */
+        clip-path: circle(50vw at right 50vw);
     }
 
     .botao-menu {
-        top: 10px; /* Ajusta a posição do botão-menu */
+        top: 10px;
     }
 
     .caixa-texto {
-        font-size: 14px;  /* Diminui o texto para se ajustar ao tamanho da tela */
-        width: 100%; /* Garante que o texto não ultrapasse a tela */
+        font-size: 14px;
+        width: 100%;
     }
 
     h1 {
-        font-size: 36px; /* Diminui o tamanho do título */
+        font-size: 36px;
     }
 
     span {
-        font-size: 40px; /* Diminui o tamanho do span */
+        font-size: 40px;
     }
 
     button {
-        padding: 8px 16px; /* Ajusta o tamanho do botão */
+        padding: 8px 16px;
     }
 
     .container {
-        flex-direction: column; /* Empilha os itens verticalmente */
-        align-items: center; /* Centraliza os itens */
+        flex-direction: column;
+        align-items: center;
     }
 }
